make shade fixed so it always covers entire bg

--- a/client/less/base/backdrops.import.less
+++ b/client/less/base/backdrops.import.less
@@ -1,5 +1,5 @@
 .shade {
-  position: absolute;
+  position: fixed;
   left: 0px;
   top: 0px;
   z-index: 900;
